# robot-type-quadruped

./: .gitignore  README.md
src/gui/: package.xml  setup.py
src/gui/gui/: main_window.py
src/leg_pd_controller/: package.xml
src/main_bot/: CMakeLists.txt  package.xml
src/main_bot/config/: go1_controllers.yaml  go1_controllers_walk.yaml  gz_bridge.yaml
src/main_bot/description/: go1.xacro  robot.urdf.xacro
src/main_bot/description/sensors/: body_cameras.xacro  depth_camera_left.xacro  foot_contacts.xacro  imu.xacro
src/main_bot/launch/: rz.launch.py  sim.launch.py  walk.launch.py
src/main_bot/rviz/: go1.rviz
src/main_bot/scripts/: kill_gz.sh
src/main_bot/worlds/: dog_test_world.sdf
src/unitree_guide_controller/: CMakeLists.txt  package.xml
src/unitree_guide_controller/include/unitree_guide_controller/: CtrlInterfaces.h  KeyboardInput.h  UnitreeGuideController.h
src/unitree_guide_controller/include/unitree_guide_controller/FSM/: BaseFixedStand.h  FSMState.h  StateBalanceTest.h  StateFixedStand.h  StateFreeStand.h  StateSwingTest.h  StateTrotting.h
src/unitree_guide_controller/include/unitree_guide_controller/gait/: WaveGenerator.h
src/unitree_guide_controller/src/: KeyboardInput.cpp  UnitreeGuideController.cpp
src/unitree_guide_controller/src/FSM/: BaseFixedStand.cpp  StateFixedDown.cpp  StateFixedStand.cpp  StatePassive.cpp  StateTrotting.cpp
src/unitree_guide_controller/src/control/: Estimator.cpp
src/unitree_guide_controller/src/gait/: WaveGenerator.cpp
src/unitree_guide_controller/src/robot/: QuadrupedRobot.cpp
