<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui</name>
  <version>0.0.0</version>
  <description>Tkinter control panel for starting/stopping the main_bot Gazebo sim and clearing leftover gz/ros processes, instead of juggling several terminals by hand.</description>
  <maintainer email="dangtinh.ftcpy@gmail.com">dvt</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>python3-tk</exec_depend>
  <exec_depend>main_bot</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_input_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
