<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>unitree_guide_controller</name>
    <version>0.0.0</version>
    <description>A Ros2 Control Controller based on Unitree Guide</description>
    <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>backward_ros</depend>
    <depend>controller_interface</depend>
    <depend>pluginlib</depend>
    <depend>kdl_parser</depend>
    <depend>rcpputils</depend>
    <depend>realtime_tools</depend>
    <depend>std_msgs</depend>
    <depend>rclcpp</depend>
    <depend>hardware_interface</depend>

    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
